2008-07-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	Make UpdateUnfilteredAggregates virtual, expose UnfilteredCount setter and
	Connection via protected properties.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackListModel.cs:
	Use the above changes to show the # of new podcast items in the
	SourceView, instead of the total # of items.

2008-07-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/Clients/Nereid/Nereid/ViewContainer.cs: Added
	translator comment.

2008-07-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Comment out
	Show Cover Art menu item/action.

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Remove cruft.

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Set the
	focus index as well as the selection when jumping to current song (BGO
	#538227).

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs:
	Replace spaces with underscores in artist name before encoding for
	Wikipedia URL (BGO #537682).

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/XspfMigrator.cs:
	Catch exceptions when migrating old internet radio stations over (BGO
	#539424).

	* NEWS: Some updates for 1.2

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/banshee/daap.m4: Enable DAAP by default.

	* configure.ac: Remove unstable warning for DAAP in configure.

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView_DragAndDrop.cs:
	Fix the regression where the New Playlist wouldn't appear in the sources
	list when you were drag and dropping some tracks.
